--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "productName": "FileSystemHelper",
     "version": "1.0.0",
     "description": "Simply a Promise-friendly file/directory helper",
-    "main": "FileSystemHelper.ts",
+    "main": "dist/FileSystemHelper.js",
     "scripts": {
         "build": "npx tsc -p .",
         "prettier": "find ./src -name '*.ts' | xargs prettier --write",
